--- a/src/main/resources/templates/views/record/add_form.html
+++ b/src/main/resources/templates/views/record/add_form.html
@@ -17,7 +17,7 @@
 <div layout:fragment="content">
     
     <div id="serving-tooltip" class="popover-tooltip">
-        제품 영양정보의 기준이 1회 제공량/섭취량인 경우, 해당 값을 입력해주세요. 입력하지 않으면 제품의 내용량을 기준으로 영양정보가 저장됩니다.
+        제품 영양정보의 기준이 <span class="accent">1회 제공량/섭취량</span>인 경우, 해당 값을 입력해주세요. 입력하지 않으면 제품의 내용량을 기준으로 영양정보가 저장됩니다.
     </div>
     
     <div class="header">
