--- a/src/main/resources/templates/views/record/record.html
+++ b/src/main/resources/templates/views/record/record.html
@@ -271,7 +271,7 @@
         
         
         <!-- 운동 정보 섹션 -->
-        <div class="sub-container">
+        <div class="sub-container exercise-sub">
             <div class="header">
                 <h1>운동</h1>
             </div>
