--- a/src/main/resources/static/css/record/template_detail.css
+++ b/src/main/resources/static/css/record/template_detail.css
@@ -23,7 +23,7 @@ body {
 }
 
 .top-layout {
-    background-color: #4682B4;
+    background-color: #2f4f4f;
 }
 
 /* 헤더 스타일 */
@@ -137,15 +137,15 @@ body {
 }
 
 .carb-dot {
-    background-color: white;
+    background-color: #f4eded;
 }
 
 .protein-dot {
-    background-color: #739072;
+    background-color: #36827f;
 }
 
 .fat-dot {
-    background-color: #F9D949;
+    background-color: #f9db6b;
 }
 
 .nutrient-label {
@@ -192,7 +192,7 @@ body {
     color: white;
     font-size: 14px;
     padding: 5px 12px;
-    background-color: #7f9ca7;
+    background-color: #BC3657;
     border-radius: 15px;
 }
 
@@ -255,7 +255,7 @@ body {
 
 .food-portion {
     font-size: 14px;
-    color: #7f8c8d;
+    color: #555;
 }
 
 .food-right {
@@ -286,13 +286,13 @@ body {
     flex-grow: 1;
     height: 50px;
     border-radius: 25px;
-    background-color: #2c3e50;
+    background-color: #2f4f4f;
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: bold;
     cursor: pointer;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
