--- a/src/main/resources/templates/views/loginpage/loginpage.html
+++ b/src/main/resources/templates/views/loginpage/loginpage.html
@@ -19,17 +19,20 @@
 <div layout:fragment="content">
     <div class="login-container">
         <div class="comment">로그인</div>
-        <form method="post" action="/logincheck">
-            <div class="mb-3">
-                <input type="email" class="input-field" name="email" placeholder="이메일" required>
-            </div>
-            <div class="mb-3">
-                <input type="password" class="input-field" name="password" placeholder="비밀번호" required>
-            </div>
-            <a class="btn-signup" th:href="@{/signuppage}">회원가입</a>
-            <button type="submit" class="btn btn-primary btn-login">로그인</button>
-        </form> 
+
+        <div class="mb-3">
+            <input type="email" class="input-field" id="email" placeholder="이메일" required>
+        </div>
+        <div class="mb-3">
+            <input type="password" class="input-field" id="password" placeholder="비밀번호" required>
+        </div>
+        <a class="btn-signup" th:href="@{/signuppage}">회원가입</a>
+        <button type="button" class="btn btn-primary btn-login">로그인</button>
     </div>
 </div>
+<!-- JavaScript -->
+<th:block layout:fragment="script">
+    <script th:src="@{/js/loginpage/loginpage.js}"></script>
+</th:block>
 </body>
 </html>
