"update mypage + css"

--- a/src/main/resources/static/css/loginpage/inputdata2.css
+++ b/src/main/resources/static/css/loginpage/inputdata2.css
@@ -147,9 +147,10 @@
 	justify-content: center;
 	align-items: center;
 	cursor: pointer;
+	font-weight: bold;
 }
 
-.value-select-radio:hover {
+.value-select:hover {
 	background-color:#F1F9F5;
 }
 
