--- a/src/main/resources/templates/views/board/boardmain.html
+++ b/src/main/resources/templates/views/board/boardmain.html
@@ -710,7 +710,7 @@
                             const commentHtml = `
                                 <div class="comment-item">
                                     <div class="comment-user-image">
-                                        <img src="/images/${comment.user.profileImage}" alt="Profile">
+                                        <img src="${comment.user.profileImage}" alt="Profile">
                                     </div>
                                     <div class="comment-content">
                                         <div class="comment-user-name">${comment.user.nickname}</div>
