--- a/src/main/resources/static/css/record/exercise_detail.css
+++ b/src/main/resources/static/css/record/exercise_detail.css
@@ -23,7 +23,7 @@ body {
 }
 
 .top-layout {
-    background-color: #4682B4;
+    background-color: #008080;
 }
 
 /* 헤더 스타일 */
@@ -204,7 +204,7 @@ body {
 }
 
 .remove-button {
-    color: #7f8c8d;
+    color: #555;
     font-size: 22px;
     cursor: pointer;
 }
@@ -226,7 +226,7 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #95a5a6;
+    background-color: #8AA7AF;
     color: white;
     display: flex;
     justify-content: center;
@@ -242,13 +242,13 @@ body {
     margin-left: 15px;
     height: 50px;
     border-radius: 25px;
-    background-color: #2c3e50;
+    background-color: #008080;
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: bold;
     cursor: pointer;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
@@ -266,11 +266,12 @@ body {
     position: absolute;
     width: 130px;
     height: 130px;
-    background-color: #FEF08A;
+    background-color: #f9db6b;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 /* 덤벨 아이콘 스타일 */
