--- a/src/main/resources/static/css/record/statistics.css
+++ b/src/main/resources/static/css/record/statistics.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #f8f9fa;
+    background-color: #3c707e;
     padding: 20px;
     max-width: 100%;
     overflow-x: hidden;
@@ -55,6 +55,7 @@ body {
     display: flex;
     justify-content: space-between;
     font-size: 15px;  /* 목표 정보 글자 크기 약간 작게 */
+    font-weight: 500;
 }
 
 .tab-container {
@@ -79,7 +80,7 @@ body {
 }
 
 .tab-button.active {
-    background-color: #4a7aff;
+    background-color: #005666;
     color: white;
     font-weight: bold;
 }
