디자인 수정완료

--- a/src/main/resources/templates/views/record/exercise_form.html
+++ b/src/main/resources/templates/views/record/exercise_form.html
@@ -94,7 +94,7 @@
     </div>
 
     
-    <div class="bottom-button">5</div>
+    <div class="bottom-button"></div>
     
     <div id="metTooltip" class="popover-tooltip">
         <span class="accent">METs</span>는 특정 활동이 안정 상태(1 MET)보다 얼마나 많은 에너지를 소비하는지 나타내는 <span class="accent">운동 강도 측정 단위</span>입니다.
