--- a/src/main/resources/templates/views/record/search.html
+++ b/src/main/resources/templates/views/record/search.html
@@ -283,7 +283,7 @@
         </div>
     </div>
     
-    <div class="bottom-button" th:text="${foodRecordsCount}">5</div>
+    <div class="bottom-button" th:text="${foodRecordsCount}"></div>
 </div>
 
 <!-- 페이지별 JavaScript -->
