--- a/src/main/resources/static/css/record/exercise_form.css
+++ b/src/main/resources/static/css/record/exercise_form.css
@@ -20,7 +20,7 @@ body {
 
 /* 헤더 스타일 */
 .header {
-    padding: 16px 16px 0 16px;
+    padding: 20px 20px 0 20px;
     background-color: white;
     position: sticky;
     top: 0;
@@ -60,7 +60,7 @@ body {
 .info-bar {
     display: flex;
     justify-content: space-between;
-    padding: 16px;
+    padding: 20px;
     color: #666;
     font-size: 20px;
 }
@@ -71,8 +71,9 @@ body {
 
 /* 운동 항목 */
 .exercise-list {
-    padding: 0 16px;
+    padding: 0 20px;
     display: block;
+    padding-bottom: 20px;
 }
 
 .exercise-item {
