--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -89,6 +89,11 @@
                 width: 40px;
                 height: 40px;
             }
+            
+            .wellFit-logo {
+                width: 120px;
+                height: auto;
+            }
         }
     </style>
 </th:block>
