통계 표시 버그 수정, 타이틀 wellfit 통일

--- a/src/main/resources/templates/views/record/template_detail.html
+++ b/src/main/resources/templates/views/record/template_detail.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layouts/layout}">
 
 <head>
-    <title>템플릿 상세</title>
+    <title>wellfit</title>
     
     <!-- 페이지별 css -->
     <th:block layout:fragment="css">
