--- a/src/main/resources/templates/views/record/exercise_form.html
+++ b/src/main/resources/templates/views/record/exercise_form.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layouts/layout}">
 
 <head>
-    <title>식품 검색</title>
+    <title>wellfit</title>
     
     <!-- 페이지별 css -->
     <th:block layout:fragment="css">
