history back button

--- a/src/main/resources/templates/views/mypage/mypage.html
+++ b/src/main/resources/templates/views/mypage/mypage.html
@@ -16,7 +16,7 @@
 <body>
 <div layout:fragment="content">
     <div class="header">
-        <i class="bi bi-arrow-left back-btn"></i>
+        <i class="bi bi-arrow-left back-btn" onclick="history.back()"></i>
         <h3 class="title">마이페이지</h3>
 		<i class="bi bi-pencil-square update-btn"></i>
     </div>
