update list after request

--- a/src/main/resources/static/css/friendpage/friendrequestpage.css
+++ b/src/main/resources/static/css/friendpage/friendrequestpage.css
@@ -322,3 +322,8 @@
 .button-container .btn-refuse {
 	background-color: #FB7861;
 }
+
+.friend-accept-wrapper.fade-out {
+    opacity: 0;
+    transition: opacity 0.3s ease-out;
+}
