--- a/src/main/resources/static/css/friendpage/friendpage.css
+++ b/src/main/resources/static/css/friendpage/friendpage.css
@@ -1,11 +1,34 @@
 @charset "UTF-8";
 
 * {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-		Helvetica, Arial, sans-serif;
+	font-family: 'Jua';
 	padding: 0;
 	gap: 0;
 	margin: 0;
+}
+
+.header {
+	display: flex;
+	align-items: center;
+	margin-bottom: 20px;
+	z-index: 1000;
+	position: fixed;
+    top: 0;
+    left: 0;
+    padding-top: calc(16px + env(safe-area-inset-top, 0));
+    padding-left : 1rem;
+    height: 70px;
+}
+
+.back-btn {
+    font-size: 24px;
+    cursor: pointer;
+    padding-right : 1rem;
+}
+
+.header-title {
+	margin: 0;
+	color: #005666;
 }
 
 .content-container {
@@ -124,19 +147,4 @@
 	color: #fff;
 	border: none;
 	border-radius: 0.5rem;
-}
-
-.back-btn {
-	display: flex;
-	align-items: center;
-	margin-bottom: 20px;
-	z-index: 1000;
-	position: fixed;
-    top: 0;
-    left: 0;
-    padding-left : 2rem;
-    height: 70px;	
-    font-size : 24px;
-    cursor : pointer;
-    padding-top : 0.4rem;
 }
