--- a/src/main/resources/templates/views/friendpage/followerpage.html
+++ b/src/main/resources/templates/views/friendpage/followerpage.html
@@ -2,7 +2,7 @@
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layouts/layout}" >
+      layout:decorate="~{layouts/layout2}" >
 
 <head>
     <meta charset="UTF-8">
@@ -17,7 +17,10 @@
 
 <body>
 <div layout:fragment="content">
-	<i class="bi bi-arrow-left back-btn"></i>
+	<div class="header">
+	    <i class="bi bi-arrow-left back-btn"></i>
+	    <h3 class="header-title" th:text="${user.nickname} + '님의 팔로워'" style="color: #000;"></h3>
+    </div>
 	<div class="content-container">
 		<div class="search-container">
 			<div class="search-wrapper">
