--- a/src/main/resources/templates/views/friendpage/friendpage.html
+++ b/src/main/resources/templates/views/friendpage/friendpage.html
@@ -17,7 +17,10 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <i class="bi bi-arrow-left back-btn"></i>
+	<div class="header">
+	    <i class="bi bi-arrow-left back-btn"></i>
+	    <h3 class="header-title" th:text="${user.nickname} + '님의 친구'" style="color: #000;"></h3>
+    </div>
 	<div class="content-container">
 		<div class="search-container">
 			<div class="search-wrapper">
