--- a/src/main/resources/templates/chat/chatroom.html
+++ b/src/main/resources/templates/chat/chatroom.html
@@ -44,7 +44,6 @@
         </div>
     </div>
 </div>
-
 <!-- 모달 -->
 <div id="modal" class="modal-overlay">
     <div class="modal-header">
@@ -63,6 +62,7 @@
         <span><i class="bi bi-person-lines-fill">&nbsp;&nbsp;</i>참여자</span>
         <!-- participants -->
         <ul class="participants">
+
         </ul>
     </div>
     <!-- 모달 내부 제일 마지막에 추가 -->
@@ -71,5 +71,7 @@
     </div>
 </div>
 
+<!-- 모달 배경 (fade 효과용) -->
+<div id="modalBackdrop" class="modal-backdrop-custom"></div>
 </body>
 </html>
