--- a/src/main/resources/static/css/loginpage/welcome.css
+++ b/src/main/resources/static/css/loginpage/welcome.css
@@ -3,11 +3,13 @@
 * {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 		Helvetica, Arial, sans-serif;
+	margin: 0;
+	padding: 0;
 }
 
 .content-container {
-	width: 25.75rem;
-	height: 60rem;
+	width: 100vh;
+	height: 100vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
