--- a/src/main/resources/static/css/friendpage/friendrequestpage.css
+++ b/src/main/resources/static/css/friendpage/friendrequestpage.css
@@ -1,8 +1,7 @@
 @charset "UTF-8";
 
 * {
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-		Helvetica, Arial, sans-serif;
+	font-family: 'Jua';
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
