Fix signup error

--- a/src/main/resources/templates/views/loginpage/signuppage.html
+++ b/src/main/resources/templates/views/loginpage/signuppage.html
@@ -20,7 +20,7 @@
 	<div class="login-container">
 		<div class="comment">회원가입</div>
 		<div class="mb-3">
-			<input type="nickname" class="input-field" id="nickname" placeholder="닉네임" required>
+			<input type="text" class="input-field" id="nickname" name="nickname" placeholder="닉네임" required>
 		</div>
 		<div class="mb-3">
 			<input type="email" class="input-field" id="email" placeholder="이메일" required>
