--- a/src/main/resources/templates/chat/chatroomList.html
+++ b/src/main/resources/templates/chat/chatroomList.html
@@ -20,7 +20,7 @@
 <div layout:fragment="content">
     <div class="d-flex justify-content-between align-items-center my-3">
         <h2>채팅</h2>
-        <a href="/chatroom/form" class="btn btn-success">채팅방 생성</a>
+        <a href="/chatroom/create" class="btn btn-success">채팅방 생성</a>
     </div>
     <div class="toggle-buttons">
         <a class="btn btn-openchat active">오픈채팅</a>
