--- a/src/main/resources/templates/views/record/statistics.html
+++ b/src/main/resources/templates/views/record/statistics.html
@@ -25,7 +25,7 @@
         </div>
         <div class="goal-info" th:data-current_weight="${user.getCurrentWeight()}" th:data-target_weight="${user.getGoalWeight()}">
             <div>
-                <span class="emoji">🎯</span><span id="currentWeight"></span>
+                <span class="emoji">🎯</span><span id="targetWeight"></span>
             </div>
             <div>
                 <span class="emoji" id="targetEmoji"></span><span id="targetLeft"></span>
